--- a/res/layout/install_confirm.xml
+++ b/res/layout/install_confirm.xml
@@ -80,7 +80,7 @@
     </ScrollView>
 
     <LinearLayout style="?android:attr/buttonBarStyle"
-        android:background="?android:attr/windowBackground"
+        android:background="?android:attr/colorBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
