--- a/res/layout/install_confirm_perm_update.xml
+++ b/res/layout/install_confirm_perm_update.xml
@@ -139,7 +139,7 @@
 
         <!-- Bottom buttons -->
         <LinearLayout style="?android:attr/buttonBarStyle"
-            android:background="?android:attr/windowBackground"
+            android:background="?android:attr/colorBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
